2009-11-22  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (restart): Try harder to re-exec.

	* sunrpc/create_xid.c (_create_xid): Reinitialize state after fork.

	* sysdeps/unix/sysv/linux/ntp_gettimex.c:  New file.
	* sysdeps/unix/sysv/linux/Makefile: Add rules to build ntp_gettimex.
	* sysdeps/unix/sysv/linux/Versions: Export ntp_gettimex for GLIBC_2.12.
	* sysdeps/unix/sysv/linux/sys/timex.h (ntptimeval): Add tai member and
	some placeholders.  Redirect ntp_gettime to ntp_gettimex.
	* sysdeps/unix/sysv/linux/ntp_gettime.c: Adjust for header change.

	* sysdeps/unix/sysv/linux/sys/timex.h (MOD_TAI, MOD_MICRO, MOD_NANO):
	Define.
	(STA_RONLY): Add STA_NANO, STA_MODE, and STA_CLK.

2009-11-18  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #10162]
	* sysdeps/ia64/memchr.S: Don't use a simple loop on data shorter
	than software pipeline.  Properly recover from shorter read.

2009-11-19  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10958]
	* libio/libio.h (_IO_getwc_unlocked): Check for _wide_data being
	initialized before using it.
	(_IO_putwc_unlocked): Likewise.

	[BZ #10918]
	* sysdeps/unix/sysv/linux/bits/sched.h (__CPU_ISSET_S): Use __const
	in cast to not throw away const-ness of parameters.
	(__CPU_EQUAL_S): Likewise.
	(__CPU_OP_S): Likewise.

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Introduce new symbol
	F_OWNER_PGRP and mark F_OWNER_GID obsolete.  The kernel people made
	this gratuitous change and we have to keep compatibility.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.

2009-11-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Change misleading names
	of parameters of sync_file_range.