@@ -1,3 +1,12 @@
+2009-11-23  Andreas Schwab  <schwab@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Use struct timespec
+	for timestamps also if __USE_XOPEN2K8.
+	* sysdeps/unix/sysv/linux/sparc/bits/stat.h: Likewise.
+	* sysdeps/unix/sysv/linux/s390/bits/stat.h: Likewise.
+	* sysdeps/unix/sysv/linux/powerpc/bits/stat.h: Likewise.
+	* sysdeps/unix/sysv/linux/bits/stat.h: Likewise.
+
 2009-11-22  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/connections.c (restart): Try harder to re-exec.
